# mcd

./: Cargo.toml
examples/: vanilla.rs
src/: lib.rs  updater.rs  vanilla.rs
src/apis/: mod.rs
src/apis/mojang_api/: asset_index.rs  mod.rs  version_json.rs  version_manifest.rs
