[package]
name = "mcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
manic = "0.8"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
sha1 = "0.10"
